Updated with desktop
Signed-off-by: rachit-m <rachit.iitkgp@gmail.com>

--- a/app/src/main/res/layout/activity_opening.xml
+++ b/app/src/main/res/layout/activity_opening.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/etfrst"
         android:textSize="30sp"
-        android:hint="Enter the first Number"
+        android:hint="Enter the employee number"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="50dp"
@@ -27,7 +27,7 @@
         android:id="@+id/etscnd"
         android:inputType="numberDecimal"
         android:textSize="30sp"
-        android:hint="Enter the second number"
+        android:hint="Enter the employee ID"
         android:background="#ffb9ff24"
         android:layout_below="@+id/etfrst"
         android:layout_alignParentLeft="true"
