--- a/app/src/main/res/layout/activity_opening.xml
+++ b/app/src/main/res/layout/activity_opening.xml
@@ -25,7 +25,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/etscnd"
-        android:inputType="numberDecimal"
         android:textSize="30sp"
         android:hint="Enter the employee ID"
         android:background="#ffb9ff24"
@@ -34,13 +33,27 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="44dp" />
 
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/etpin"
+        android:hint="4 digit pin"
+        android:textSize="30sp"
+        android:background="#ffb9ff24"
+        android:visibility="invisible"
+        android:layout_below="@+id/etscnd"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="44dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="User verification"
         android:id="@+id/tvres"
         android:textSize="30sp"
-        android:layout_below="@+id/etscnd"
+        android:layout_below="@+id/etpin"
         android:layout_marginTop="48dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
