--- a/app/src/main/res/layout/mostimp.xml
+++ b/app/src/main/res/layout/mostimp.xml
@@ -53,6 +53,7 @@
         android:layout_width="60dp"
         android:layout_height="40dp"
         android:visibility="gone"
+        android:textColor="@color/colorPrimary"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/text_margin"
