--- a/app/src/main/res/layout/contacts.xml
+++ b/app/src/main/res/layout/contacts.xml
@@ -40,6 +40,7 @@
                     android:layout_centerHorizontal="true"
                     android:drawableLeft="@android:drawable/ic_menu_search"
                     android:background="@drawable/rounded_corner"
+                    android:inputType="textNoSuggestions"
                     android:hint="Add contacts you often call"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -68,10 +69,10 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:visibility="gone"
         android:clickable="true"
         app:backgroundTint="#FFFFFF"
         android:src="@android:drawable/ic_menu_myplaces"
