Contact List creation added

--- a/app/src/main/res/layout/activity_init_tag.xml
+++ b/app/src/main/res/layout/activity_init_tag.xml
@@ -55,8 +55,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:clickable="true"
+        android:visibility="gone"
         app:backgroundTint="#FFFFFF"
-        android:src="@android:drawable/ic_input_add"
+        android:src="@android:drawable/ic_menu_call"
         app:layout_anchor="@+id/app_bar"
         app:layout_anchorGravity="top|right"
         android:layout_gravity="center_vertical|center_horizontal"
